Add population and schools

--- a/datasets.yml
+++ b/datasets.yml
@@ -1,4 +1,9 @@
 - url: 'https://www.data.gouv.fr/fr/datasets/r/5d5c4384-b19a-4ddf-910b-6e9cbaa8e1d6'
   filename: 'cog_2023.csv'
+  doc: 'https://www.data.gouv.fr/fr/datasets/code-officiel-geographique-cog/'
 - url: 'https://www.data.gouv.fr/fr/datasets/r/261bc54d-d856-4d11-b4f8-f2b01e3073c6'
   filename: 'revenus_2022_sur_2021.zip'
+  doc: 'https://www.data.gouv.fr/fr/datasets/limpot-sur-le-revenu-par-collectivite-territoriale-ircom/'
+- url: 'https://www.data.gouv.fr/fr/datasets/r/b22f04bf-64a8-495d-b8bb-d84dbc4c7983'
+  filename: 'annuaire_education.csv'
+  doc: 'https://www.data.gouv.fr/fr/datasets/annuaire-de-leducation/'
